# PerpX

./: .gitignore  Cargo.toml  README.md  config.toml  config.toml.example
src/: config.rs  helper.rs  main.rs  redis.rs  types.rs  worker.rs
src/handlers/: mod.rs  trend_handler.rs
