[package]
name = "futures-ticker"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fxhash = "0.2"
toml = "0.7"
fast_websocket_client = "0.4.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.99"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["chrono","env-filter"] }
rustis = "0.16.1"
uuid = { version = "1.18.1", features = ["v4"] }
